--- a/front_gui_nodules/src/app/components/menu/menu.component.html
+++ b/front_gui_nodules/src/app/components/menu/menu.component.html
@@ -3,8 +3,8 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand " routerLink="/candidato/listar">
-      <img src="https://t3.ftcdn.net/jpg/05/14/36/48/240_F_514364850_xLOQX6SOY2qcjAIcTowsi3xYvHmhmvs0.jpg" width="100" height="100" class="d-inline-block" style="border-radius: 50%;" alt="">
+    <a class="navbar-brand " routerLink="/usuario/listar">
+      <img src="https://t3.ftcdn.net/jpg/05/14/36/48/240_F_514364850_xLOQX6SOY2qcjAIcTowsi3xYvHmhmvs0.jpg" width="100" height="100" class="d-inline-block" style="border-radius: 50%; margin-left: 20%;" alt="">
       
     </a>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
@@ -23,6 +23,21 @@
             </li>   -->
             <li class="nav-item" >
                 <a class="nav-link  "  routerLink="/usuario/listar"><i class="fa-solid fa-user"></i> Usuarios</a>
+            </li>
+            <li class="nav-item" >
+                <a class="nav-link  "  routerLink="/tipoUsuarios/listar"><i class="fa-solid fa-user"></i> Tipo Usuarios</a>
+            </li>
+            <li class="nav-item" >
+                <a class="nav-link  "  routerLink="/tipoRegistros/listar"><i class="fa-solid fa-user"></i> Tipo Registro</a>
+            </li>
+            <li class="nav-item" >
+                <a class="nav-link  "  routerLink="/registros/listar"><i class="fa-solid fa-user"></i> Registros</a>
+            </li>
+            <li class="nav-item" >
+                <a class="nav-link  "  routerLink="/parametros/listar"><i class="fa-solid fa-user"></i> Parametros</a>
+            </li>
+            <li class="nav-item" >
+                <a class="nav-link  "  routerLink="/imagenesTac/listar"><i class="fa-solid fa-user"></i> Imagenes Tac</a>
             </li>
             <li class="nav-item"  >
                 <a class="nav-link  "  routerLink="/view"><i class="fas fa-house" ></i> Visualizador</a>
