--- a/front_gui_nodules/src/app/components/create-parametro/create-parametro.component.html
+++ b/front_gui_nodules/src/app/components/create-parametro/create-parametro.component.html
@@ -1,1 +1,26 @@
-<p>create-parametro works!</p>
+<app-menu></app-menu>
+<div class="wrapper">
+      <hr class="justifyLine" width="h-100" color="white"/>
+      <h4  class=" mb-4 col-md-12 col-sm-12 col-12 text-center col-light" *ngIf="!edit"  >Crear Parametro</h4>
+      <h4  class=" mb-4 col-md-12 col-sm-12 col-12 text-center col-light" *ngIf="edit"  >Editar Parametro</h4>
+      <div class="container">
+        <form  [formGroup]="parametroForm">
+       <div class="row">
+         <div class="col-md-4 mb-3">
+           <label for="validationServer013">Parametro</label>
+           <input type="text" class="form-control" formControlName="parametro" id="validationServer013" 
+             required name="parametro" >
+         </div>
+         <div class="col-md-4 mb-3">
+           <label for="validationServer013">Valor</label>
+           <input type="text" class="form-control" formControlName="valor" id="validationServer013" 
+             required name="valor" >
+         </div>
+       </div>
+       <button class="btn btn-outline-success btn-block offset-md-4 rounded mt-1" (click)="onCreate()" [disabled]="parametroForm.invalid" *ngIf="!edit">Crear</button>
+       <button class="btn btn-outline-success btn-block offset-md-4 rounded mt-1" (click)="onEdit()" [disabled]="parametroForm.invalid" *ngIf="edit">Editar</button>
+       <button  class="btn btn-outline-danger btn block offset-md-1" (click)="irAtras()"> Cancelar</button>
+     </form></div>
+</div>
+
+  
