--- a/front_gui_nodules/src/app/components/list-imagen-tac/list-imagen-tac.component.html
+++ b/front_gui_nodules/src/app/components/list-imagen-tac/list-imagen-tac.component.html
@@ -1,1 +1,27 @@
-<p>list-imagen-tac works!</p>
+<app-menu></app-menu>
+<div class="wrapper" style="width: 70%; margin-left: auto; margin-right: auto;">
+    <h4  class="mb-4 col-md-12 col-sm-12 col-12 text-center col-light"   > Imagenes TAC</h4>
+    <div class="table-responsive">
+        <table class="table">
+            <thead class="table-dark">
+                <tr>
+                    <th>Id</th>
+                    <th>Identificador</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let img of imagenesTac">
+                    <td>{{img.id}}</td>
+                    <td>{{img.identificador}}</td>
+                    <td><button class="btn btn-outline-warning" routerLink="/imagenesTac/editar/{{img.id}}"><i class="fa-solid fa-pen"></i></button></td>
+                    <td><button class="btn btn-outline-danger" (click)="borrar(img)"><i class="fa-solid fa-trash-can"></i></button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="mx-auto" style="width: 200px;">
+        <button type="button" class="btn btn-success"  [routerLink]="['/imagenesTac/crear']">Crear Usuario</button>
+      </div>
+</div>
