--- a/front_gui_nodules/src/app/components/list-registro/list-registro.component.html
+++ b/front_gui_nodules/src/app/components/list-registro/list-registro.component.html
@@ -1,1 +1,31 @@
-<p>list-registro works!</p>
+<app-menu></app-menu>
+<div class="wrapper" style="width: 70%; margin-left: auto; margin-right: auto;">
+    <h4  class="mb-4 col-md-12 col-sm-12 col-12 text-center col-light"   > Registros</h4>
+    <div class="table-responsive">
+        <table class="table">
+            <thead class="table-dark">
+                <tr>
+                    <th>Id</th>
+                    <th>Tipo Registro</th>
+                    <th>Imagen Tac</th>
+                    <th>Usuario</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let registro of registros">
+                    <td>{{registro.id}}</td>
+                    <td>{{registro.tipoRegistroId}}</td>
+                    <td>{{registro.imagenTacId}}</td>
+                    <td>{{registro.usuarioId}}</td>
+                    <td><button class="btn btn-outline-warning" routerLink="/registros/editar/{{registro.id}}"><i class="fa-solid fa-pen"></i></button></td>
+                    <td><button class="btn btn-outline-danger" (click)="borrar(registro)"><i class="fa-solid fa-trash-can"></i></button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="mx-auto" style="width: 200px;">
+        <button type="button" class="btn btn-success"  [routerLink]="['/registros/crear']">Crear Registros</button>
+      </div>
+</div>
