--- a/front_gui_nodules/src/app/components/list-usuario/list-usuario.component.html
+++ b/front_gui_nodules/src/app/components/list-usuario/list-usuario.component.html
@@ -1,5 +1,5 @@
 <app-menu></app-menu>
-<div class="wrapper" style="width: 60%; margin-left: 20%;">
+<div class="wrapper" style="width: 70%; margin-left: auto; margin-right: auto;">
     <h4  class="mb-4 col-md-12 col-sm-12 col-12 text-center col-light"   > Usuarios</h4>
     <div class="table-responsive">
         <table class="table">
@@ -19,7 +19,7 @@
                     <td>{{user.username}}</td>
                     <td>{{user.email}}</td>
                     <td>{{user.telefono}}</td>
-                    <td><button class="btn btn-outline-warning" routerLink="/usuario/editar/{{user.nombreUsuario}}"><i class="fa-solid fa-pen"></i></button></td>
+                    <td><button class="btn btn-outline-warning" routerLink="/usuario/editar/{{user.id}}"><i class="fa-solid fa-pen"></i></button></td>
                     <td><button class="btn btn-outline-danger" (click)="borrar(user)"><i class="fa-solid fa-trash-can"></i></button></td>
                 </tr>
             </tbody>
