Ajustes Frontend y backend se paso repositorio back

--- a/front_gui_nodules/src/app/components/create-usuario/create-usuario.component.html
+++ b/front_gui_nodules/src/app/components/create-usuario/create-usuario.component.html
@@ -38,8 +38,8 @@
          <div class="col-md-4 mb-3">
            <label for="validationServer013">Tipo Usuario</label>
            <select type="text" class="form-control " id="validationServer053"
-            formControlName="tipo_usuario"
-             required name="tipo_usuario" >
+            formControlName="tipoUsuario"
+             required name="tipoUsuario" >
                 <option></option>
                 <option *ngFor="let tipo of tipoUsaurioList"
                     value="{{tipo.id}}">
