--- a/front_gui_nodules/src/app/components/list-registro/list-registro.component.html
+++ b/front_gui_nodules/src/app/components/list-registro/list-registro.component.html
@@ -6,6 +6,7 @@
             <thead class="table-dark">
                 <tr>
                     <th>Id</th>
+                    <th>Fecha</th>
                     <th>Tipo Registro</th>
                     <th>Imagen Tac</th>
                     <th>Usuario</th>
@@ -16,9 +17,10 @@
             <tbody>
                 <tr *ngFor="let registro of registros">
                     <td>{{registro.id}}</td>
-                    <td>{{registro.tipoRegistroId}}</td>
-                    <td>{{registro.imagenTacId}}</td>
-                    <td>{{registro.usuarioId}}</td>
+                    <td>{{registro.fecha | date:'YYYY-MM-dd'}}</td>
+                    <td>{{registro.tipoRegistro}}</td>
+                    <td>{{registro.imagenTacid}}</td>
+                    <td>{{registro.usuario}}</td>
                     <td><button class="btn btn-outline-warning" routerLink="/registros/editar/{{registro.id}}"><i class="fa-solid fa-pen"></i></button></td>
                     <td><button class="btn btn-outline-danger" (click)="borrar(registro)"><i class="fa-solid fa-trash-can"></i></button></td>
                 </tr>
