--- a/front_gui_nodules/src/app/components/visualizador/visualizador.component.html
+++ b/front_gui_nodules/src/app/components/visualizador/visualizador.component.html
@@ -1,4 +1,5 @@
 <app-menu></app-menu>
 <div class="wrapper" style="width: 60%; margin-left: 20%;">
     <h4  class="mb-4 col-md-12 col-sm-12 col-12 text-center col-light"   > Visualizador</h4>
+    <app-visualizador></app-visualizador>
 </div>
