--- a/front_gui_nodules/src/app/components/list-registro/list-registro.component.html
+++ b/front_gui_nodules/src/app/components/list-registro/list-registro.component.html
@@ -1,16 +1,16 @@
 <app-menu></app-menu>
 <div class="wrapper" style="width: 70%; margin-left: auto; margin-right: auto;">
-    <h4  class="mb-4 col-md-12 col-sm-12 col-12 text-center col-light"   > Registros</h4>
+    <h4  class="mb-4 mt-5 col-md-12 col-sm-12 col-12 text-center col-light"   > RESULTADOS</h4>
     <div class="table-responsive">
         <table class="table">
             <thead class="table-dark">
                 <tr>
                     <th>Id</th>
                     <th>Fecha</th>
+                    <th>UUID</th>
                     <th>Tipo Registro</th>
-                    <th>Imagen Tac</th>
                     <th>Usuario</th>
-                    <th>Editar</th>
+                    <th>Ver Detalle</th>
                     <th>Eliminar</th>
                 </tr>
             </thead>
@@ -18,10 +18,11 @@
                 <tr *ngFor="let registro of registros">
                     <td>{{registro.id}}</td>
                     <td>{{registro.fecha | date:'YYYY-MM-dd'}}</td>
-                    <td>{{registro.tipoRegistro}}</td>
-                    <td>{{registro.imagenTacid}}</td>
-                    <td>{{registro.usuario}}</td>
-                    <td><button class="btn btn-outline-warning" routerLink="/registros/editar/{{registro.id}}"><i class="fa-solid fa-pen"></i></button></td>
+                    <td>{{registro.uuid}}</td>
+                    <td>{{registro.tipoRegistro.tipoRegistro}}</td>
+                    <td>{{registro.usuario.nombre + " " + registro.usuario.apellido}}</td>
+                    <!-- <td><button class="btn btn-outline-warning" routerLink="/registros/editar/{{registro.id}}"><i class="fa-solid fa-eye"></i></button></td> -->
+                    <td><button class="btn btn-outline-warning" routerLink="/registros/view/{{registro.uuid}}"><i class="fa-solid fa-eye"></i></button></td>
                     <td><button class="btn btn-outline-danger" (click)="borrar(registro)"><i class="fa-solid fa-trash-can"></i></button></td>
                 </tr>
             </tbody>
