--- a/front_gui_nodules/src/app/components/visualizador/visualizador.component.css
+++ b/front_gui_nodules/src/app/components/visualizador/visualizador.component.css
@@ -1,3 +1,16 @@
 .wrapper{
     background-color: #ffffff;
 }
+.dwv{
+    position: relative;
+    padding-bottom: 56.25%; /* Proporción 16:9 */
+    height: 230vh;
+    width: 100%;
+}
+.dwv iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:100%;
+}
