--- a/front_gui_nodules/src/app/components/detalle-registro/detalle-registro.component.css
+++ b/front_gui_nodules/src/app/components/detalle-registro/detalle-registro.component.css
@@ -1,8 +1,55 @@
-.json-container {
-    background-color: #f5f5f5;
-    border: 1px solid #ddd;
-    padding: 10px;
-    overflow: auto;
-    max-height: 400px; /* Establece una altura máxima para evitar desbordamientos */
-    white-space: pre-wrap; /* Mantiene los saltos de línea y el formato */
-}
+.image-container {
+    position: relative;
+    text-align: center; /* Centra la imagen horizontalmente */
+    padding: 10px; /* Agrega un espacio alrededor de la imagen */
+    max-width: 100%; /* Garantiza que la imagen no sea más ancha que su contenedor */
+    max-height: 100%; /* Garantiza que la imagen no sea más alta que su contenedor */
+    overflow: hidden; /* Oculta cualquier parte de la imagen que sea más grande que el contenedor */
+  }
+  
+  .image-container img {
+    width: auto; /* Hace que la imagen se ajuste automáticamente al ancho del contenedor */
+    height: auto; /* Hace que la imagen se ajuste automáticamente a la altura del contenedor */
+    max-width: 100%; /* Garantiza que la imagen no sea más ancha que su contenedor */
+    max-height: 100%; /* Garantiza que la imagen no sea más alta que su contenedor */
+    display: block; /* Elimina cualquier espacio en blanco adicional debajo de la imagen */
+    margin: 0 auto; /* Centra la imagen horizontalmente dentro del contenedor */
+    transition: transform 0.3s ease; /* Agrega una transición suave para la propiedad transform */
+    cursor: pointer; 
+  }
+  .image-container.zoomed img {
+    transform: scale(2); /* Ajusta el valor según el nivel de zoom deseado */
+  }
+  
+
+.data-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20px;
+  }
+  
+  .data-block {
+    flex-basis: calc(25% - 20px);
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 10px;
+  }
+  
+  .data-block p {
+    margin: 5px 0;
+  }
+  
+  @media (max-width: 768px) {
+    .data-block {
+      flex-basis: calc(50% - 20px);
+    }
+  }
+  
+  @media (max-width: 576px) {
+    .data-block {
+      flex-basis: 100%;
+    }
+  }
+  
