--- a/front_gui_nodules/src/app/components/create-usuario/create-usuario.component.html
+++ b/front_gui_nodules/src/app/components/create-usuario/create-usuario.component.html
@@ -61,4 +61,9 @@
      </form></div>
 </div>
 
-  
+<div class="overlay" *ngIf="isLoading">
+  <div class="spinner">
+      <div class="loader"></div>
+      <p>Loading...</p>
+  </div>
+</div>
