--- a/front_gui_nodules/src/app/components/detalle-registro/detalle-registro.component.html
+++ b/front_gui_nodules/src/app/components/detalle-registro/detalle-registro.component.html
@@ -25,3 +25,10 @@
       </div>
       
 </div>
+
+<div class="overlay" *ngIf="isLoading">
+  <div class="spinner">
+      <div class="loader"></div>
+      <p>Loading...</p>
+  </div>
+</div>
