--- a/front_gui_nodules/src/app/components/list-parametro/list-parametro.component.html
+++ b/front_gui_nodules/src/app/components/list-parametro/list-parametro.component.html
@@ -18,7 +18,7 @@
                     <td>{{parametro.parametro}}</td>
                     <td>{{parametro.valor}}</td>
                     <td><button class="btn btn-outline-warning" routerLink="/parametros/editar/{{parametro.id}}"><i class="fa-solid fa-pen"></i></button></td>
-                    <td><button class="btn btn-outline-danger" (click)="borrar(parametro)"><i class="fa-solid fa-trash-can"></i></button></td>
+                    <td><button class="btn btn-outline-danger" (click)="confirmarEliminar(parametro)"><i class="fa-solid fa-trash-can"></i></button></td>
                 </tr>
             </tbody>
         </table>
@@ -26,4 +26,11 @@
     <div class="mx-auto" style="width: 200px;">
         <button type="button" class="btn btn-success"  [routerLink]="['/parametros/crear']">Crear Parametro</button>
       </div>
+</div>
+
+<div class="overlay" *ngIf="isLoading">
+    <div class="spinner">
+        <div class="loader"></div>
+        <p>Loading...</p>
+    </div>
 </div>
