--- a/front_gui_nodules/src/app/components/list-tipo-usuario/list-tipo-usuario.component.html
+++ b/front_gui_nodules/src/app/components/list-tipo-usuario/list-tipo-usuario.component.html
@@ -16,7 +16,7 @@
                     <td>{{tipo.id}}</td>
                     <td>{{tipo.rol}}</td>
                     <td><button class="btn btn-outline-warning" routerLink="/tipoUsuarios/editar/{{tipo.id}}"><i class="fa-solid fa-pen"></i></button></td>
-                    <td><button class="btn btn-outline-danger" (click)="borrar(tipo)"><i class="fa-solid fa-trash-can"></i></button></td>
+                    <td><button class="btn btn-outline-danger" (click)="confirmarEliminar(tipo)"><i class="fa-solid fa-trash-can"></i></button></td>
                 </tr>
             </tbody>
         </table>
@@ -24,4 +24,11 @@
     <div class="mx-auto" style="width: 200px;">
         <button type="button" class="btn btn-success"  [routerLink]="['/tipoUsuarios/crear']">Crear Tipo Usuario</button>
       </div>
+</div>
+
+<div class="overlay" *ngIf="isLoading">
+    <div class="spinner">
+        <div class="loader"></div>
+        <p>Loading...</p>
+    </div>
 </div>
