--- a/front_gui_nodules/src/app/components/list-usuario/list-usuario.component.html
+++ b/front_gui_nodules/src/app/components/list-usuario/list-usuario.component.html
@@ -20,7 +20,7 @@
                     <td>{{user.email}}</td>
                     <td>{{user.telefono}}</td>
                     <td><button class="btn btn-outline-warning" routerLink="/usuario/editar/{{user.id}}"><i class="fa-solid fa-pen"></i></button></td>
-                    <td><button class="btn btn-outline-danger" (click)="borrar(user)"><i class="fa-solid fa-trash-can"></i></button></td>
+                    <td><button class="btn btn-outline-danger" (click)="confirmarEliminar(user)"><i class="fa-solid fa-trash-can"></i></button></td>
                 </tr>
             </tbody>
         </table>
@@ -28,4 +28,11 @@
     <div class="mx-auto" style="width: 200px;">
         <button type="button" class="btn btn-success"  [routerLink]="['/usuario/crear']">Crear Usuario</button>
       </div>
+</div>
+
+<div class="overlay" *ngIf="isLoading">
+    <div class="spinner">
+        <div class="loader"></div>
+        <p>Loading...</p>
+    </div>
 </div>
