--- a/front_gui_nodules/src/app/components/visualizador/visualizador.component.css
+++ b/front_gui_nodules/src/app/components/visualizador/visualizador.component.css
@@ -3,14 +3,12 @@
 }
 .dwv{
     position: relative;
-    padding-bottom: 56.25%; /* Proporción 16:9 */
-    height: 230vh;
+    padding-bottom: 56.25%; 
+    height: 100%;
     width: 100%;
 }
-.dwv iframe{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height:100%;
+
+.container{
+    width: 250vh;
+    height: 290vh;
 }
