--- a/front_gui_nodules/src/app/components/visualizador/visualizador.component.html
+++ b/front_gui_nodules/src/app/components/visualizador/visualizador.component.html
@@ -1,11 +1,11 @@
 <app-menu></app-menu>
-<div class="wrapper" style="width: 60%; margin-left: 20%">
+<div class="wrapper" style="width: 100%;">
   <h4 class="mb-4 col-md-12 col-sm-12 col-12 text-center col-light">
     Visualizador
   </h4>
-  <div>
+  <div class="container">
     <iframe
-      src="http://localhost:8080/tests/"
+      src="http://localhost:8081/tests/"
       frameborder="0"
       class="dwv"
     ></iframe>
