--- a/frontend-portal/src/app/components/visualizador/visualizador.component.html
+++ b/frontend-portal/src/app/components/visualizador/visualizador.component.html
@@ -5,7 +5,7 @@
   </h4>
   <div class="container">
     <iframe
-      src="http://localhost:8081/tests/"
+      src="http://127.0.0.1:8081/tests/"
       frameborder="0"
       class="dwv"
     ></iframe>
