--- a/frontend-portal/src/app/components/list-parametro/list-parametro.component.html
+++ b/frontend-portal/src/app/components/list-parametro/list-parametro.component.html
@@ -1,9 +1,10 @@
 <app-menu></app-menu>
-<div class="wrapper" style="width: 70%; margin-left: auto; margin-right: auto;">
-    <h4  class="mb-4 col-md-12 col-sm-12 col-12 text-center col-light"   > Parametros</h4>
-    <div class="table-responsive">
+<div class="wrapper" style="width: 60%; margin-left: auto; margin-right: auto;">
+    <h4 class="title">Parámetros</h4>
+    <p class = "descripcion">Modificación y/o creación de parámetros del sistema.</p>
+    <div class="table table-striped">
         <table class="table">
-            <thead class="table-dark">
+            <thead class="table-sm">
                 <tr>
                     <th>Id</th>
                     <th>Parametro</th>
