--- a/frontend-portal/src/app/components/list-usuario/list-usuario.component.html
+++ b/frontend-portal/src/app/components/list-usuario/list-usuario.component.html
@@ -1,9 +1,10 @@
 <app-menu></app-menu>
-<div class="wrapper" style="width: 70%; margin-left: auto; margin-right: auto;">
-    <h4  class="mb-4 col-md-12 col-sm-12 col-12 text-center col-light"   > Usuarios</h4>
-    <div class="table-responsive">
+<div class="wrapper" style="width: 60%; margin-left: auto; margin-right: auto;">
+    <h4 class="title">Usuarios</h4>
+    <p class = "descripcion">Creación y/o modificación de los usuarios que acceden al sistema.</p>
+    <div class="table table-striped">
         <table class="table">
-            <thead class="table-dark">
+            <thead class="table-sm">
                 <tr>
                     <th>Nombre</th>
                     <th>Nombre de Usuario</th>
