--- a/frontend-portal/src/app/components/visualizador/visualizador.component.html
+++ b/frontend-portal/src/app/components/visualizador/visualizador.component.html
@@ -1,11 +1,9 @@
 <app-menu></app-menu>
 <div class="wrapper" style="width: 100%;">
-  <h4 class="mb-4 col-md-12 col-sm-12 col-12 text-center col-light">
-    Visualizador
-  </h4>
   <div class="container">
+    <h4 class="title" style="text-align: center;">Visualizador</h4>
     <iframe
-      src="http://127.0.0.1:8081/tests/"
+      src="http://127.0.0.1:8080/tests/"
       frameborder="0"
       class="dwv"
     ></iframe>
