--- a/frontend-portal/src/styles.css
+++ b/frontend-portal/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Roboto', sans-serif;
+}  
+
+.title {
+    font-size: 35px; 
+    font-weight: bold;
+    text-align: left; 
+    margin-top: 45px; 
+    color: #133c7f !important
+  }
+  
+  .descripcion {
+    font-size: 18px;
+    margin-bottom: 45px;
+    color: #666
+  }
+
+
+    
