--- a/frontend-portal/src/app/components/detalle-registro/detalle-registro.component.css
+++ b/frontend-portal/src/app/components/detalle-registro/detalle-registro.component.css
@@ -90,3 +90,16 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.image-container {
+  overflow: hidden;
+}
+
+#zoom-img {
+  width: 100%; /* Ajusta el ancho de la imagen según tu diseño */
+  transition: transform 0.3s ease;
+}
+
+#zoom-img.zoomed {
+  transform: scale(2); /* Ajusta el nivel de zoom */
+}
