--- a/frontend-portal/src/app/components/detalle-registro/detalle-registro.component.html
+++ b/frontend-portal/src/app/components/detalle-registro/detalle-registro.component.html
@@ -7,7 +7,7 @@
   <div class="data-container">
     <div class="data-block">
       <p><strong>ID</strong><br> {{ resultDetail.id }}</p>
-      <p><strong>Fecha</strong><br> {{ resultDetail.fecha }}</p>
+      <p><strong>Fecha</strong><br> {{ resultDetail.fecha | date:'dd-MM-yyyy'}}</p>
       <p><strong>UUID</strong><br> {{ resultDetail.uuid }}</p>
     </div>
     <div class="data-block">
@@ -15,16 +15,16 @@
       <p><strong>Nombre del Estudio</strong><br> {{ resultDetail.nombreEstudio }}</p>
     </div>
     <div class="data-block">
-      <p><strong>Usuario</strong><br> {{ resultDetail.usuario.nombre }} {{ resultDetail.usuario.apellido }}</p>
-      <p><strong>Email</strong><br> {{ resultDetail.usuario.email }}</p>
-      <p><strong>Teléfono</strong><br> {{ resultDetail.usuario.telefono }}</p>
+      <p><strong>Usuario</strong><br> {{ resultDetail.user.nombre }} {{ resultDetail.user.apellido }}</p>
+      <p><strong>Email</strong><br> {{ resultDetail.user.email }}</p>
+      <p><strong>Teléfono</strong><br> {{ resultDetail.user.telefono }}</p>
     </div>
-    <div class="data-block" [ngStyle]="{ 'background-color': getColorBackground(resultDetail.tipoRegistro.id) }">
-      <p><strong>Clasificado por la IA como</strong><br> {{ resultDetail.tipoRegistro.tipoRegistro }}</p>
-      <i *ngIf="resultDetail.tipoRegistro.id === 1 || resultDetail.tipoRegistro.id === 2"
+    <div class="data-block" [ngStyle]="{ 'background-color': getColorBackground(resultDetail.recordType.id) }">
+      <p><strong>Clasificado por la IA como</strong><br> {{ resultDetail.recordType.tipoRegistro }}</p>
+      <i *ngIf="resultDetail.recordType.id === 1 || resultDetail.recordType.id === 2"
         class="fa-solid fa-triangle-exclamation"
         style="font-size: 80px; display: block; text-align: center; margin-top: 10px;"></i>
-      <i *ngIf="resultDetail.tipoRegistro.id === 3 || resultDetail.tipoRegistro.id === 4"
+      <i *ngIf="resultDetail.recordType.id === 3 || resultDetail.recordType.id === 4"
         class="fa-solid fa-circle-check"
         style="font-size: 80px; display: block; text-align: center; margin-top: 10px;"></i>
     </div>
