--- a/frontend-portal/src/app/components/login/login.component.html
+++ b/frontend-portal/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
                 <div class="user_card">
                     <div class="d-flex justify-content-center">
                         <div class="brand_logo_container">
-                            <img src="https://t3.ftcdn.net/jpg/05/14/36/48/240_F_514364850_xLOQX6SOY2qcjAIcTowsi3xYvHmhmvs0.jpg" class="brand_logo" alt="Logo">
+                            <img src="../../../assets/LogoPulmones-removebg-preview.png" class="brand_logo" alt="Logo">
                         </div>
                     </div>
                     <div class="d-flex justify-content-center form_container">
